# website-monitor

./: .gitignore  README.md  pyproject.toml
migrations/: 0001-create-initial-schema.sql  0002-create-monitoring-schema.sql
src/: __main__.py
src/website_monitor/: __main__.py  contracts.py  domain.py  worker.py
src/website_monitor/config/: __init__.py  constants.py  db_config.py  http_config.py  logging-config-dev.json  logging-config-prod.json  logging_config.py  monitoring_context.py
src/website_monitor/fetcher/: aiohttp_fetcher.py
src/website_monitor/processor/: delegating_processor.py  error_persistence_processor.py  metrics_persistence_processor.py  prometheus_processor.py
src/website_monitor/scheduler/: asyncpg_scheduler.py
tests/: test_worker.py
tests/config/: test_config_init.py  test_db_config.py  test_http_config.py  test_logging_config.py  test_monitoring_context.py
tests/fetcher/: test_aiohttp_fetcher.py
tests/processor/: test_delegating_processor.py  test_error_persistence_processor.py  test_metrics_persistence_processor.py  test_prometheus_processor.py
tests/website_monitor/: test_worker.py
tests/website_monitor/config/: test_config_init.py  test_db_config.py  test_http_config.py  test_logging_config.py
tests/website_monitor/fetcher/: test_aiohttp_fetcher.py
tests/website_monitor/processor/: test_delegating_processor.py
tests/website_monitor/scheduler/: test_asyncpg_scheduler.py
utils/: README.md  generate_insert_query.py  mock_server.py
