[project]
name = "website-monitor"
version = "0.1.0"
description = "A website monitoring tool"
readme = "README.md"
authors = [
    { name = "Gianluigi De Marco", email = "dem.gianluigi@gmail.com" }
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml==6.0.2",
    "aiohttp[speedups]==3.12.13",
    "asyncpg==0.30.0",
    "python-json-logger==3.3.0",
    "py-spy==0.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.0",
    "mypy>=1.16.1",
    "asyncpg-stubs"
]

[project.urls]
"Homepage" = "https://github.com/dmgiangi/website-monitor"
"Bug Tracker" = "https://github.com/dmgiangi/website-monitor/issues"


[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
